--- a/index.html
+++ b/index.html
@@ -34,43 +34,28 @@
       href="./favicon-16x16.png"
     />
     <link rel="manifest" href="./site.webmanifest" />
-    <title>The XXX program, with JS</title>
+    <title>The "Hello World!" program, with JS</title>
   </head>
 
   <body>
     <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
-    <script>
-      src="./js/script.js">
-    </script>
+    <script src="./js/script.js"></script>
     <div class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
       <header class="mdl-layout__header">
         <div class="mdl-layout__header-row">
-          <span class="mdl-layout-title">The XXX program, with JS</span>
+          <span class="mdl-layout-title"
+            >The "Hello World!" program, with JS</span
+          >
         </div>
       </header>
       <main class="mdl-layout__content">
         <div class="right-image">
           <img src="./images/image.png" />
         </div>
-        <div class="page content">Instructions here ...</div>
+        <div class="page content">Click the button!</div>
         <br />
         <!-- Simple Textfield for integers-->
         <form action="#">
-          <div class="mdl-textfield mdl-js-textfield">
-            <!-- input pattern attribute -->
-            <input
-              class="mdl-textfield__input"
-              type="text"
-              pattern="-?[0-9]*(\.[0-9]+)?"
-              id="length"
-            />
-            <!-- mdl-textfield__label -->
-            <label class="mdl-textfield__label" for="demo-input"
-              >Length of ... (mm)</label
-            >
-            <!-- class "mdl-textfield__error" -->
-            <span class="mdl-textfield__error">Input is not a number</span>
-          </div>
           <br />
           <!-- Accent-colored raised button with ripple -->
           <button
@@ -78,7 +63,7 @@
             onclick="myButtonClicked()"
             type="button"
           >
-            Calculate
+            CLICK HERE
           </button>
         </form>
         <br />
